working animations - buggy on Firefox

--- a/src/App.css
+++ b/src/App.css
@@ -50,6 +50,10 @@
     .list-item.animate {
         animation: scaleAndFade 0.5s ease;
     }
+    .list-item.animate-leave {
+        animation: scaleAndFadeLeave 0.5s ease;
+    }
+
     @keyframes scaleAndFade {
         0% {
             opacity: 0;
@@ -58,6 +62,16 @@
         100% {
             opacity: 1;
             transform: scale(1);
+        }
+    }
+    @keyframes scaleAndFadeLeave {
+        0% {
+            opacity: 1;
+            transform: scale(1);
+        }
+        100% {
+            opacity: 0;
+            transform: scale(0.9);
         }
     }
 }
